# sogmm_open3d

./: CMakeLists.txt  README.md  colcon.pkg
include/sogmm_open3d/: EM.h  GMM.h  KInit.h  Open3DUtils.h  SOGMMGPU.h  SOGMMInference.h  SOGMMLearner.h
include/sogmm_open3d/pybind/: SOGMM.h
src/: gmm_open3d_py.cpp  kinit_open3d_py.cpp  sogmm_open3d_py.cpp
src/pybind/: gmm_open3d_py.cpp  sogmm_gpu.cpp
src/tests/: sogmm_test.cpp
test/: basic.py  compute_cholesky.py  compute_log_det_cholesky.py  default_test_config.yaml  get_diagonal.py  log_sum_exp_cols.py  matmul_batch.py  novelty_check.py  score_samples.py  sogmm_gpu_test.py  test_color_conditional.py  time_profiler.py
test/test_data/: X.txt  compute_cholesky_python_output.txt  covs.txt  estimate_log_gaussian_prob_python_output.txt  means.txt  precisions_cholesky.csv  precs_chol.txt  python_output.csv
